# speech_processing

./: .buildinfo  .gitignore  Makefile  README.md  a.html  deploy.sh  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.devcontainer/: Dockerfile  devcontainer.json  requirements-dev.txt  requirements.txt
.doctrees/: a.doctree  bnf.doctree  environment.pickle  index.doctree
.doctrees/calculus/: differential_equation.doctree  index.doctree
.doctrees/control_engineering/: index.doctree
.doctrees/database/: fundamental.doctree  rdmodel.doctree
.doctrees/implementation/: cepstrum.doctree  index.doctree  test.doctree  test_torch.doctree
.doctrees/ml/: bayes.doctree  cmvc.doctree  cvaegan.doctree  (+3 more)
_sources/: a.rst.txt  index.rst.txt
calculus/: differential_equation.html
control_engineering/: index.html
database/: fundamental.html  index.html  rdmodel.html
implementation/: index.html  test.html  test_torch.html
logic/: index.html
ml/: attention.html  bayes.html  cmvc.html  cvaegan.html  gan.html  generativemodel.html  index.html  variational.html
modeling/: dimentional.html
pachouli/: acoustic_wave.html  complex.html  convolution.html  level.html  nbsphinx.html  spectrum.html  statistics.html  symbol.html  visualization.html  wave_equation.html
paper/: autovc.html  rozs.html  sscr.html  vqmivc.html  vqvae.html
processing/: fourier.html  index.html  laplace.html
source/: conf.py  index.rst
speech_analysis/: acep.html  index.html  mfcc.html  mgcs.html
type_theory/: index.html
(+99 files in other folders)
