[tool.poetry]
name = "speech_processing"
version = "0.1.0"
description = ""
authors = ["kjun1 <p.k.maejima1211@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
pylint = "^2.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
