[tool.poetry]
name = "speech_processing"
version = "0.1.0"
description = ""
authors = ["kjun1 <p.k.maejima1211@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7.11"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
python-dataset = "^0.0.4"
nbsphinx = "^0.8.7"
pandoc = "^1.1.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
black = "^21.9b0"
flake8 = "^4.0.1"
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
